# rust-vulkan

./: Cargo.toml
mesh_primitives/: Cargo.toml
sample/: Cargo.toml
sample/shaders/: base.frag  base.frag.spv  base.vert  base.vert.spv
sample/src/: app.rs  camera.rs  frame_data.rs  macros.rs  main.rs  mesh.rs  model.rs  scene.rs  transform.rs  utils.rs  vertex.rs
src/: command_pool.rs  device.rs  instance.rs  lib.rs  physical_device.rs  queue_family.rs  surface.rs  swapchain.rs
vulkan_renderer/: Cargo.toml
vulkan_renderer/src/: buffer.rs  cmd.rs  command_pool.rs  descriptorset.rs  device.rs  enums.rs  framebuffer.rs  image.rs  instance.rs  lib.rs  physical_device.rs  pipeline.rs  queue_family.rs  render_pass.rs  shader_utils.rs  slice_utils.rs  surface.rs  swapchain.rs  sync.rs  utils.rs
vulkan_renderer/src/camera/: mod.rs
vulkan_renderer/src/macros/: mod.rs
vulkan_renderer/src/primitives/: mesh.rs  mod.rs  vertex.rs
