[package]
edition = "2021"
name = "sample"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.35.1"
glam = "0.20.2"
gltf = "1.0.0"
itertools = "0.10.3"
memoffset = "0.6.5"
uuid = {version = "0.8.2", features = ["serde", "v4"]}
vulkan_renderer = {path = "../vulkan_renderer"}
winit = "0.26.1"
