[package]
edition = "2021"
name = "vulkan_renderer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = {version = "0.35.0", features = ["linked", "debug"]}
ash-window = "0.9.0"
colored = "2.0.0"
thiserror = "1.0.30"
winit = "0.26.0"
